# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.185 2008/01/30 20:59:48 ulm Exp $

  30 Jan 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-23.0.50-r1.ebuild, emacs-cvs-23.0.60-r1.ebuild:
  Add missing dependency on pkgconfig.

  30 Jan 2008; Ulrich Mueller <ulm@gentoo.org>
  -files/emacs-cvs-format-int.patch,
  -files/emacs-cvs-hack-local-variables.patch,
  -files/emacs-cvs-make-tramp-temp-file.patch,
  -files/emacs-cvs-makeinfo-regexp.patch,
  -files/emacs-cvs-no-x-compile.patch,
  -emacs-cvs-22.1.50_p20070829-r2.ebuild,
  -emacs-cvs-23.0.0_p20070920-r1.ebuild:
  Remove old CVS snapshots.

  26 Jan 2008; Ulrich Mueller <ulm@gentoo.org>
  -files/emacs-cvs-disable_alsa_detection-r1.patch,
  emacs-cvs-22.1.50-r2.ebuild, emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  The ALSA disable patch failed (again) on the trunk. Replace it by sed magic.

  10 Jan 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Remove desktop and icon files to avoid collisions between SLOTs and with
  x11-misc/emacs-desktop. Thanks to Stelian Ionescu for pointing this out.

  02 Jan 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Remove explicit zlib dependency.

  28 Dec 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Include net-libs/liblockfile in dependencies, fixes bug #203624.

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.60-r1.ebuild: