@@ -1,7 +1,8 @@
 AUX emacs-cvs-Xaw3d-headers.patch 2045 RMD160 96b8ce942b83a5177c965a9a3a485496eb672c67 SHA1 a04c98c22ed9608ac6d81db0b9031da9a5b115db SHA256 ed1ad532e6476a0c2311e2c76db82035455948ace4dffb17b3e6493ec22af59c
 AUX emacs-cvs-freebsd-sparc.patch 475 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 SHA1 71c6d9ee3b3e5149a33d440373a212b56fbd064c SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b
-EBUILD emacs-cvs-22.1.50-r2.ebuild 8775 RMD160 cc1e8a183639b2ac9de48dc4a5bcae9c802a48c7 SHA1 63d25812bbebd6f3ac116b8227c6b4bcc060356b SHA256 3897f44f53cd4b919b2a2118032dc1a666b12de74eab3aea43df595068dd9bc1
+DIST emacs-22.1.90.tar.gz 38666426 RMD160 f7ea2c8dfdf8280a7bbc520a4ccae78c780d4d8f SHA1 d8765d5e388181439a77c8770ab97c59c5037ee9 SHA256 364b7de18df635538e2f69d0e169784f27d4d740e3004233bbebef03575472e5
+EBUILD emacs-cvs-22.1.90.ebuild 8243 RMD160 b6b1d6b49cf2613f75929f53e2fddce08039899b SHA1 a729fb92fcef8dda489edf616b430f13be975b6e SHA256 4fc71ca14bf8d2bb51e514484000f18ba4b71260a911fc5aaad3b97b3b98e684
 EBUILD emacs-cvs-23.0.50-r1.ebuild 8837 RMD160 8bc28058049726c9e536338f5d6115a290401666 SHA1 6386a9e8b7faeb302310ed6e7ad39369ba7cc728 SHA256 6a0fe76cef88b508e7720a674fc121169bbba6e8b5964e2c36e00a0459ead501
 EBUILD emacs-cvs-23.0.60-r1.ebuild 9052 RMD160 657416dbd7870f6966b87592d753294af5022201 SHA1 613fdda8042c510fcad46d58489ebee2bd0cd38d SHA256 dccc46be33645c591ac0de5e1456c7fff3e8520a823a2b6f2afad20948480680
-MISC ChangeLog 36289 RMD160 e6d96f25b0708a6ee5b39dcc25b84c5e8e3a9168 SHA1 f05f0e61c16ea2cb251a1e0da2f2ae6ebcaf34e4 SHA256 6c755eb5b09df27b02f9fee66fd08f11c2a9c29f467fe0d0ba9df2dcc06727af
+MISC ChangeLog 36535 RMD160 b307106beb603490fe0f9867baca98c78f0783aa SHA1 eac0faee9faff023216ee9350bd173c3b343c76d SHA256 3e6ff9d4ecfba3e2b09a8ae93de6c01b3c0a19ebebd2278089a1c3325b26fa3f
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
